# obc

./: README.md  controller_config.yml  methods_to_test.py  obc_controller.py  requirements.txt
.github/workflows/: python_test.yml
BSP/: STM32H745I-Discovery_BSP_User_Manual.chm
BreakoutSTM32F4/: STM32F4Breakout.kicad_pcb  STM32F4Breakout.kicad_pcb-bak  breakout-cache.lib  breakout.bak  breakout.kicad_pcb-bak  breakout.net  breakout.sch
OBC_mocksat_21_22/OBC_mocksat2021/: from smbus import SMBus.py  i2c_test_arudino_slave.ino  readme.md
OBC_mocksat_21_22/OBC_mocksat2022/: i2c_slave_arduino_test.ino  readme.md
OBC_mocksat_21_22/OBC_mocksat2022/TempSensor/: .cproject  .mxproject  .project  STM32G0B1RETX_FLASH.ld  STM32G0B1RETX_RAM.ld  tempsensor.ioc
OBC_mocksat_21_22/OBC_mocksat2022/TempSensor/Core/Src/: main.c  stm32g0xx_hal_msp.c
STM32/: stm32.py  usage.py
STM32/code_for_stm32/: i2c_pi_handler.c  i2c_pi_handler.h
STM32/raw_scripts/: read_stm32.py  write_stm32.py
Src/: board_utils.c  dma.c  i2c.c
circuit-simulations/: MicroSDConnector.asc  TemperatureSensor.asc  Voltage Converter.asc
eps/: Katherine-power-code  code
rpi-software/: README.md  satellite.py
rpi-software/PI-OBC/: LEDroutine.py  README.md  controller_config.yml  obc_controller.py
rpi-software/PI-OBC/Adafruit_ADC/examples/: mcp3008.py  testrun.py
rpi-software/PI-OBC/Real_Time_Clock/: rtc.py  test_rtc.py  usage.py
rpi-software/PI-OBC/Temperature_Sensor/: temperature_sensor.py  usage.py
rpi-software/adc_interface/: ADC_Class.py
rpi-software/drivers/: I2C.py  arduino.py
rpi-software/drivers/RTC/: README.txt  rtc.py  rtc_raspberri_pi.py  rtc_test.py  test_rtc.py
rpi-software/events/: default_ISRs.py  eventmanager.py
rpi-software/managers/: taskmanager.py  watchdogmanager.py
rpi-software/subsystems/: adcs.py  comms.py  eps.py  example_class.py
rpi-software/tasks/: ground_station.py  logger.py  radio_task.py  template_task.py  test_task.py  time_task.py
stm32-software/: CMakeLists.txt  README.md  arm-none-eabi-gcc.cmake
stm32-software/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_i2c.c
stm32-software/Inc/: board_utils.h  main.h  stm32fxx_it.h
stm32-software/Src/: gpio.c  main.c  stm32f4xx_it.c
tests/: test_example.py
